--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../assets/images/favicon.ico" type="image/x-icon" rel="icon">
     <title>Wordle Clone</title>
 
     <link href="../assets/css/style.css" type="text/css" rel="stylesheet">
@@ -15,7 +16,6 @@
 </head>
 
 <body id="body" onload="onLoad();">
-    <h1 id="title">Wordle Clone</h1>
     <div id="results">
         <div class="close-icon" onclick="closeResults();">
             <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
@@ -30,6 +30,7 @@
         </div>
     </div>
     <div id="game">
+        <h1 id="title">Wordle Clone</h1>
         <div id="guesses"></div>
         <div id="keyboard"></div>
     </div>
